# aj_sr04m

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  idf_component.yml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  push-component.yml
aj_sr04m/: README.md  aj_sr04m.c  idf_component.yml
aj_sr04m/exemples/: CMakeLists.txt
aj_sr04m/exemples/get_started/: CMakeLists.txt  main.c
aj_sr04m/exemples/get_started/main/: idf_component.yml
aj_sr04m/include/: aj_sr04m.h
aj_sr04m/test/: CMakeLists.txt  aj_sr04m_test.c
componant/aj_sr04m/: README.md  aj_sr04m.c  idf_component.yml
componant/aj_sr04m/exemples/get_started/: sdkconfig.defaults
componant/aj_sr04m/exemples/get_started/main/: idf_component.yml  main.c
componant/aj_sr04m/test/: CMakeLists.txt  aj_sr04m_test.c  mocks.c  mocks.h
componant/test/: CMakeLists.txt  sdkconfig.defaults
componant/test/main/: CMakeLists.txt  gcov.ld  main_test.c
components/aj_sr04m/: CMakeLists.txt  Kconfig  aj_sr04m.c  idf_component.yml
components/aj_sr04m/exemples/get_started/main/: main.c
docs/: Doxyfile
examples/aj_sr04m_example/: CMakeLists.txt  README.md
examples/aj_sr04m_example/main/: idf_component.yml  main.c
include/: aj_sr04m.h
src/: aj_sr04m.c
tests/cases/: main_test.c  mocks.c  mocks.h  test_mode1_2_gpio_rmt.c  test_mode3_autonomous.c  test_mode4_uart_binary.c  test_mode5_uart_ascii.c  test_parser.c
tests/linux/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.jsn_sr04t  sdkconfig.defaults.mode1  sdkconfig.defaults.mode2  sdkconfig.defaults.mode3  sdkconfig.defaults.mode4  sdkconfig.defaults.mode5
tests/linux/main/: CMakeLists.txt
tests/linux/shims/: uart_caps_shim.h
tests/linux/shims/include/driver/: gpio.h  rmt_rx.h
tests/qemu/: CMakeLists.txt  sdkconfig.defaults.mode1  sdkconfig.defaults.mode2  sdkconfig.defaults.mode3  sdkconfig.defaults.mode4  sdkconfig.defaults.mode5
tests/qemu/main/: CMakeLists.txt
